# crypt4gh-rust

./: Cargo.toml  README.md
data/bam/: MDX230458_normal.sliced.bam  MDX230458_normal.sliced.bam.bai  MDX230466_tumor.sliced.bam  MDX230466_tumor.sliced.bam.bai
data/crypt4gh/: htsnexus_test_NA12878.bam
src/: bin.rs  cyphertext.rs  edit_lists.rs  encrypted_data.rs  error.rs  header.rs  io.rs  keys.rs  lib.rs  main.rs  plaintext.rs
src/decoder/: mod.rs
src/decrypt/: builder.rs  data_block.rs  mod.rs
src/decrypt/header/: mod.rs
src/decrypt/reader/: builder.rs  decode.rs  mod.rs
src/decrypter/: builder.rs  data_block.rs  mod.rs
src/decrypter/header/: mod.rs  packets.rs
src/decryption/: mod.rs
src/decryption/decoder/: mod.rs
src/decryption/decrypter/: builder.rs
src/decryption/decrypter/header/: packets.rs
src/encrypt/: builder.rs  data_block.rs  encrypted_data.rs  header.rs  mod.rs
src/encrypt/header/: mod.rs  packets.rs
src/encrypter/header/: mod.rs
src/io/: reader.rs
src/reader/: builder.rs  mod.rs
src/util/: mod.rs
tests/: edit_list_gen.rs  test_common.rs  test_data_block.rs  test_decoder.rs  test_decrypter.rs  test_edit_list.rs  test_header.rs  test_keys.rs  test_reader.rs  test_util.rs
